--- a/index.html
+++ b/index.html
@@ -60,7 +60,37 @@
       });
   }
 
+  let mainDiv= document.getElementById('divContainer');
+  let newButton= document.createElement("button");
+  newButton.innerHTML='create new size';
+  newButton.classList.add('button');
+  mainDiv.before(newButton);
+  newButton.style.height='50px';
+  newButton.style.width='100px';
+  newButton.addEventListener('click',function(){
+    let newSize = prompt('Enter the number of squares per side for the new grid (max 100):')
+    if(newSize<1 || newSize>100){
+    alert("Please enter the valid number");
+    } else {
+      
+    const element = document.getElementById("divContainer");
+  element.remove();
+  let g = document.createElement('div');
+g.setAttribute("id", "divContainer");
+document.getElementsByTagName('body')[0].appendChild(g);
+ 
+  let styleCSS = "height:"+ (640/newSize) +"px;" + "width:"+ (640/newSize) +"px";
   
+        createDivInsideDiv(newSize, newSize);
+        for (let i = 0; i < (document.getElementsByClassName("square").length); i++) {
+          document.getElementsByClassName("square")[i].setAttribute("style",styleCSS);
+        }
+      }
+  });
+
+
+
+
 </script>
 </body>
 </html>
