--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       height: 640px;
       display: flex;
       flex-wrap: wrap;
+      background-color: white;
     }
     .square {
       box-sizing: border-box;
